# RenpyEx

./: .gitignore  AUDIT_2026-07-04.md  Cargo.toml  LICENSE  README.md
src/: cli.rs  error.rs  key.rs  lib.rs  main.rs  output.rs  test_fixtures.rs
src/archive/: mod.rs  rpa.rs  rpyc.rs  walker.rs
src/convert/: image.rs  mod.rs  targets.rs
src/gui/: app.rs  config.rs  mod.rs  ops.rs  theme.rs
src/verify/: magic.rs  mod.rs  sha.rs
tests/: build_fixtures.py  cli_smoke.rs  gui_smoke.rs  mutations.rs
tests/fixtures/: sample.rpa
