[package]
name = "renpyex"
version = "0.1.0"
edition = "2024"
description = "Ren'Py archive extractor with byte-perfect extraction and integrity verification"
license = "MIT"
authors = ["RenpyEx contributors"]
repository = "https://github.com/rolanfreeman6-png/RenpyEx"
readme = "README.md"
keywords = ["renpy", "archive", "extract", "rpa", "rpyc"]
categories = ["command-line-utilities", "parser-implementations"]

[[bin]]
name = "renpyex"
path = "src/main.rs"

[lib]
name = "renpyex"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
flate2 = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = "symbols"
lto = "thin"
opt-level = 3
codegen-units = 1

[lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"
missing_docs = "warn"

[lints.clippy]
correctness = { level = "deny", priority = -1 }
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
