[package]
name = "renpyex"
version = "0.1.0"
edition = "2024"
description = "Ren'Py archive extractor with byte-perfect extraction and integrity verification"
license = "MIT"
authors = ["RenpyEx contributors"]
repository = "https://github.com/rolanfreeman6-png/RenpyEx"
readme = "README.md"
keywords = ["renpy", "archive", "extract", "rpa", "rpyc"]
categories = ["command-line-utilities", "parser-implementations"]

[[bin]]
name = "renpyex"
path = "src/main.rs"

[[bin]]
name = "renpyex-gui"
path = "src/bin/gui.rs"
required-features = ["gui"]

[lib]
name = "renpyex"
path = "src/lib.rs"

[features]
gui = ["dep:egui", "dep:eframe", "dep:rfd", "dep:raw-window-handle", "dep:windows-sys"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
flate2 = "1"
egui = { version = "0.29.1", optional = true }
eframe = { version = "0.29", default-features = false, features = ["glow", "default_fonts"], optional = true }
rfd = { version = "0.15", optional = true }
raw-window-handle = { version = "0.6", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"], optional = true }

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = "symbols"
lto = "thin"
opt-level = 3
codegen-units = 1

[lints.rust]
# `deny` rather than `forbid`: the GUI's Windows layered-window setup
# (src/bin/gui.rs) needs one narrowly-scoped `#[allow(unsafe_code)]` for the
# Win32 calls; everything else still fails the build on `unsafe`.
unsafe_code = "deny"
unused_must_use = "deny"
missing_docs = "warn"

[lints.clippy]
correctness = { level = "deny", priority = -1 }
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
